--- a/static/style/ui/_smacss.scss
+++ b/static/style/ui/_smacss.scss
@@ -6,7 +6,7 @@
     position: absolute;
   }
   &-flex {
-    display: flex;
+    display: flex !important;
     &--space-between {
       justify-content: space-between;
 
@@ -119,5 +119,11 @@
   }
   &-50 {
     margin-left: 50px
+  }
+}
+
+.pt {
+  &-15 {
+    padding-top: 15px;
   }
 }
