Update color noti

--- a/static/style/modules/_color.scss
+++ b/static/style/modules/_color.scss
@@ -18,18 +18,18 @@ $color-link: #1a0dab;
 $color-bg-dark: #141518;
 $color-core-dark: #2C2F34; 
 
-$color-info-o-medium: rgb(131, 195, 254)
-$color-info-3: rgb(238, 247, 255)
-$color-info-8: rgb(2, 132, 254)
+$color-info-o-medium: rgb(131, 195, 254);
+$color-info-3: rgb(238, 247, 255);
+$color-info-8: rgb(2, 132, 254);
 
-$color-danger-o-medium: #ff5d5d
-$color-danger-3: #ffeaea
-$color-danger-8: #f06482
+$color-danger-o-medium: #ff5d5d;
+$color-danger-3: #ffeaea;
+$color-danger-8: #f06482;
 
-$color-warning-o-medium: rgb(255, 202, 101)
-$color-warning-3: rgb(255, 236, 199)
-$color-warning-8: #ffad0d
+$color-warning-o-medium: rgb(255, 202, 101);
+$color-warning-3: rgb(255, 236, 199);
+$color-warning-8: #ffad0d;
 
-$color-success-o-medium: rgb(62, 211, 163)
-$color-success-3: #eaf7f2
-$color-success-8: #36ab80
+$color-success-o-medium: rgb(62, 211, 163);
+$color-success-3: #eaf7f2;
+$color-success-8: #36ab80;
