--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -5,3 +5,14 @@ body {
   font-family: sans-serif !important;
   margin: 0px !important;
 }
+
+.container {
+  max-width: 1000px;
+  margin: auto
+}
+
+@media screen and (max-width: 1170px) {
+  .container {
+    padding: 0px 10px;
+  }
+}
