--- a/static/style/ui/_smacss.scss
+++ b/static/style/ui/_smacss.scss
@@ -9,7 +9,9 @@
     display: flex !important;
     &--space-between {
       justify-content: space-between;
-
+    }
+    &--row {
+      flex-direction: row;
     }
     &--end {
       justify-content: flex-end;
@@ -76,6 +78,9 @@
   &-25 {
     margin-top: 25px
   }
+  &-30 {
+    margin-top: 30px
+  }
   &-50 {
     margin-top: 50px
   }
@@ -123,7 +128,40 @@
 }
 
 .pt {
+  &-5 {
+    padding-top: 5px;
+  }
+  &-10 {
+    padding-top: 10px;
+  }
   &-15 {
     padding-top: 15px;
+  }
+  &-20 {
+    padding-top: 20px;
+  }
+  &-30 {
+    padding-top: 30px;
+  }
+  &-50 {
+    padding-top: 50px;
+  }
+}
+
+.pb {
+  &-5 {
+    padding-bottom: 5px;
+  }
+  &-10 {
+    padding-bottom: 10px;
+  }
+  &-20 {
+    padding-bottom: 20px;
+  }
+  &-30 {
+    padding-bottom: 30px;
+  }
+  &-50 {
+    padding-bottom: 50px;
   }
 }
