Select avatar account

--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -2,5 +2,6 @@
 @import "./header.scss";
 @import "./smacss.scss";
 @import "./sign.scss";
-@import "./customize.scss";
 @import "./info.scss";
+@import "./responsive";
+@import "./customize.scss";
