--- a/static/style/ui/_customize.scss
+++ b/static/style/ui/_customize.scss
@@ -1,3 +1,16 @@
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background: #b4b9c2;
+  box-shadow: 0 4px 4px rgba(0,0,0,.25);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+}
+
 .ant-notification {
   width: 352px;
 
@@ -59,4 +72,36 @@
       }
     }
   }
+}
+
+.ant-modal-header {
+  padding: 0px;
+  overflow: hidden;
+  border: none;
+}
+
+.ant-modal-body {
+  background: #3c424b;
+}
+
+.ant-modal-title {
+  height: 44px;
+  font-size: 17px;
+  font-family: Proxima Nova ExtraBold,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 500;
+  text-align: center;
+  background-color: #585f69;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $color-white;
+}
+
+.ant-modal-close-x {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $color-white;
 }
