--- a/static/style/ui/_info.scss
+++ b/static/style/ui/_info.scss
@@ -2,8 +2,10 @@
   &--wrapper {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("https://imgur.com/user/tieuhoantoly/cover");
   }
+
   &--user {
     &__avatar {
+      overflow: hidden;
       height: 128px;
       width: 128px;
       border-radius: 50%;
@@ -11,6 +13,36 @@
       font-weight: 800;
       color: $color-white;
       background-image: url(https://i.imgur.com/XzARrBw_d.png?maxwidth=290&fidelity=grand);
+
+      &:hover {
+        .edit-avatar--mask {
+          display: flex !important; 
+        }
+      }
+
+      img {
+        width: 100%;
+      }
+
+      .edit-avatar--mask {
+        display: none !important;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        border-radius: 50%;
+        background: rgba(0,0,0,.4);
+
+        .ant-btn {
+          border: 2px solid $color-white;
+          color: $color-white;
+          text-align: center;
+          font-size: 14px;
+          padding: 0px 12px;
+          background: transparent;
+        }
+      }
     }
 
     &__name {
@@ -43,6 +75,92 @@
     .ant-tabs-nav-scroll {
       display: flex;
       justify-content: center;
+    }
+  }
+}
+
+.modal-select--image {
+  .ant-modal-content {
+    width: 624px;
+  }
+
+  .ant-modal-body {
+    padding: 40px;
+    width: 624px;
+    height: 424px;
+    overflow-y: scroll;
+  }
+  
+  .ant-modal-footer {
+    background: #3c424b;
+    border: none;
+    padding: 16px 24px 20px 24px;
+  }
+}
+
+.list-avatar {
+  grid-template-columns: repeat(auto-fill, minmax(72px,1fr));
+  display: grid;
+  grid-gap: 24px;
+
+  .avatar-item {
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    overflow: hidden;
+
+    &:hover {
+      border: 3px solid $color-white;
+      transform: scale(1.2);
+      cursor: pointer;
+    }
+
+    &--selected {
+      border: 3px solid $color-white;
+      transform: scale(1.2);
+      cursor: pointer;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  }
+}
+
+.modal-footer {
+  .ant-btn {
+    height: 40px;
+  }
+
+  &--cancel {
+    padding: 0 16px;
+    margin-right: 12px;
+    background: transparent;
+    border-style: none;
+    color: $color-white;
+    
+    &:hover {
+      color: $color-white;
+      background: linear-gradient(0deg,hsla(0,0%,100%,.12),hsla(0,0%,100%,.12));
+    }
+  }
+
+  &--save {
+    color: $color-white;
+    font-size: 14px;
+    letter-spacing: .3px;
+    width: 140px;
+    background: #2fbe7c;
+    border-style: none;
+
+    &:hover {
+      background: linear-gradient(0deg,hsla(0,0%,100%,.12),hsla(0,0%,100%,.12)),#2fbe7c;
+    }
+
+    &:focus {
+      background: #2fbe7c;
     }
   }
 }
