--- a/static/style/modules/_color.scss
+++ b/static/style/modules/_color.scss
@@ -7,8 +7,8 @@ $color-blue: #3484e3;
 $color-white: #fff;
 $color-mix-dark: rgb(112, 125, 148);
 $color-black: #000;
-$color-green: rgb(40, 167, 69);
-$color-green-light: #4eb76e;
+$color-green: #1bb76e;
+$color-green-light: #1fd17e;
 $color-orange: #f50;
 $color-green-bulma: #00d1b2;
 $color-red-bulma: #ff3860;
@@ -17,6 +17,8 @@ $color-link: #1a0dab;
 
 $color-bg-dark: #141518;
 $color-core-dark: #2C2F34; 
+
+$color-gray: rgba(255, 255, 255, 0.25);
 
 $color-info-o-medium: rgb(131, 195, 254);
 $color-info-3: rgb(238, 247, 255);
@@ -33,3 +35,5 @@ $color-warning-8: #ffad0d;
 $color-success-o-medium: rgb(62, 211, 163);
 $color-success-3: #eaf7f2;
 $color-success-8: #36ab80;
+
+$color-purple: #4d59fc
