--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -3,5 +3,7 @@
 @import "./smacss.scss";
 @import "./sign.scss";
 @import "./info.scss";
-@import "./responsive";
 @import "./customize.scss";
+@import "./edit-post.scss";
+
+@import "./responsive";
