Update list post

--- a/static/style/modules/_color.scss
+++ b/static/style/modules/_color.scss
@@ -15,7 +15,9 @@ $color-red-bulma: #ff3860;
 $color-primary-light: #49a9ee;
 $color-link: #1a0dab;
 
-$color-bg-dark: #141518;
+// $color-bg-dark: #141518;
+$color-bg-dark: #131c32;
+// $color-bg-dark: #2e3035;
 $color-core-dark: #2C2F34; 
 
 $color-gray: rgba(255, 255, 255, 0.25);
