--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -4,6 +4,7 @@
 @import "./sign.scss";
 @import "./info.scss";
 @import "./customize.scss";
+@import "./reaction.scss";
 @import "./edit-post.scss";
 
 @import "./responsive";
