reaction and comment

--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -6,5 +6,6 @@
 @import "./customize.scss";
 @import "./reaction.scss";
 @import "./edit-post.scss";
+@import "./post.scss";
 
 @import "./responsive";
