--- a/static/style/ui/_edit-post.scss
+++ b/static/style/ui/_edit-post.scss
@@ -332,6 +332,11 @@
       }
     }
 
+    .ant-input {
+      border-radius: 20px;
+      font-size: 17px;
+    }
+
     .like-btn {
       .reaction-box {
         left: 0px;
@@ -398,4 +403,66 @@
     height: 300px;
   }
   // width: 200px; 
+}
+
+.emoji {
+  .ant-popover-inner-content {
+    padding: 0;
+  }
+  .emoji-mart-emoji {
+    outline: none;
+    box-shadow: none;
+
+    span {
+      outline: none;
+      box-shadow: none;
+    }
+  }
+}
+
+.comment {
+  .ant-input {
+    border-radius: 20px;
+  }
+
+  &-list {
+    &--wrapper {
+      margin-top: 8px;
+    }
+  }
+
+  &-item {
+    &--wrapper {
+      // padding: 0px 16px 0px 16px;
+    }
+
+    &--avatar {
+      margin-right: 8px;
+    }
+
+    &--detail {
+      background-color: #f5f5f5;
+      border-radius: 20px;
+      padding: 8px;
+      width: fit-content;
+
+      &__account {
+        font-weight: 600;
+      }
+
+      &__content {
+        word-break: break-word;
+      }
+
+      &__reply {
+        color: #65676b;
+        font-weight: 500;
+        font-size: 12px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
