--- a/static/style/ui/_smacss.scss
+++ b/static/style/ui/_smacss.scss
@@ -57,7 +57,7 @@
     margin-bottom: 5px
   }
   &-10 {
-    margin-bottom: 10px
+    margin-bottom: 10px !important;
   }
   &-15 {
     margin-bottom: 15px
@@ -78,7 +78,7 @@
     margin-top: 5px
   }
   &-10 {
-    margin-top: 10px
+    margin-top: 10px !important;
   }
   &-15 {
     margin-top: 15px
@@ -174,5 +174,44 @@
   }
   &-50 {
     padding-bottom: 50px;
+  }
+}
+
+.pl {
+  &-5 {
+    padding-left: 5px;
+  }
+  &-10 {
+    padding-left: 10px !important;
+  }
+  &-15 {
+    padding-left: 15px;
+  }
+  &-20 {
+    padding-left: 20px;
+  }
+  &-30 {
+    padding-left: 30px;
+  }
+  &-50 {
+    padding-left: 50px;
+  }
+}
+
+.pr {
+  &-5 {
+    padding-right: 5px;
+  }
+  &-10 {
+    padding-right: 10px !important;
+  }
+  &-20 {
+    padding-right: 20px;
+  }
+  &-30 {
+    padding-right: 30px;
+  }
+  &-50 {
+    padding-right: 50px;
   }
 }
