--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -7,5 +7,6 @@
 @import "./reaction.scss";
 @import "./edit-post.scss";
 @import "./post.scss";
+@import "./settings.scss";
 
 @import "./responsive";
