--- a/static/style/ui/_smacss.scss
+++ b/static/style/ui/_smacss.scss
@@ -22,6 +22,9 @@
     &--row {
       flex-direction: row;
     }
+    &--column {
+      flex-direction: column;
+    }
     &--end {
       justify-content: flex-end;
     }
