--- a/static/style/ui/_edit-post.scss
+++ b/static/style/ui/_edit-post.scss
@@ -371,18 +371,17 @@
     }
 
     &:nth-of-type(2n+1){
-      height: 300px;
+      height: 280px;
     }
 
     &:nth-of-type(2n+0){
-      height: 400px;
+      height: 380px;
     }
 
     &--detail {
       height: 84px;
-      padding-top: 12px;
-      padding-left: 15px;
-      padding-right: 15px;
+      padding: 12px 15px;
+
       &__title {
         font-weight: 500;
         line-height: 1.14;
@@ -392,7 +391,6 @@
         display: inline-block;
         max-height: 45px;
         overflow: hidden;
-        // padding: 0 15px;
       }
     }
   }
