--- a/static/style/ui/_index.scss
+++ b/static/style/ui/_index.scss
@@ -1,1 +1,163 @@
+@import "../modules/color.scss";
 
+.article-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 32px;
+  color: $color-white;
+
+  &--wrapper {
+   
+  }
+
+  .article-item {
+    &--wrapper {
+    }
+
+    &--title {
+      padding: 16px 20px;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 22px;
+    }
+
+    &--detail {
+      font-weight: 500;
+      line-height: 22px;
+      font-size: 13px;
+      margin-top: 8px;
+
+      &__user {
+        .name {
+          margin-left: 8px;
+        }
+      }
+    }
+
+    &--image {
+      position: relative;
+      border-radius: 8px;
+      overflow: hidden;
+      cursor: pointer;
+      height: 280px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        background: linear-gradient(to bottom, transparent 0%, transparent 8.1%, rgba(0,0,0,0.001) 15.5%, rgba(0,0,0,0.003) 22.5%, rgba(0,0,0,0.005) 29%, rgba(0,0,0,0.008) 35.3%, rgba(0,0,0,0.011) 41.2%, rgba(0,0,0,0.014) 47.1%, rgba(0,0,0,0.016) 52.9%, rgba(0,0,0,0.019) 58.8%, rgba(0,0,0,0.022) 64.7%, rgba(0,0,0,0.025) 71%, rgba(0,0,0,0.027) 77.5%, rgba(0,0,0,0.029) 84.5%, rgba(0,0,0,0.03) 91.9%, rgba(0,0,0,0.03) 100%);
+        bottom: 0;
+        right: 0;
+        left: 0;
+        top: 0;
+        display: none;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        background: linear-gradient(180deg, transparent 62%, rgba(0,0,0,0.00345888) 63.94%, rgba(0,0,0,0.014204) 65.89%, rgba(0,0,0,0.0326639) 67.83%, rgba(0,0,0,0.0589645) 69.78%, rgba(0,0,0,0.0927099) 71.72%, rgba(0,0,0,0.132754) 73.67%, rgba(0,0,0,0.177076) 75.61%, rgba(0,0,0,0.222924) 77.56%, rgba(0,0,0,0.267246) 79.5%, rgba(0,0,0,0.30729) 81.44%, rgba(0,0,0,0.341035) 83.39%, rgba(0,0,0,0.367336) 85.33%, rgba(0,0,0,0.385796) 87.28%, rgba(0,0,0,0.396541) 89.22%, rgba(0,0,0,0.4) 91.17%);
+        bottom: 0;
+        right: 0;
+        left: 0;
+        top: 0;
+        display: none;
+      }
+
+      &:hover {
+        &::before {
+          display: block;
+        }
+        &::after {
+          display: block;
+        }
+        .article-item--options {
+          display: block;
+        }
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    &--options {
+      z-index: 1;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      display: none;
+    }
+  }
+}
+
+.story {
+  &-list {
+    &--wrapper {
+      cursor: pointer;
+      background: #17330a;
+      padding: 20px 0px;
+      border-radius: 10px;
+    }
+
+    &--title {
+      color: #fff;
+      font-size: 20px;
+    }
+  }
+
+  &-item {
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+    &:hover {
+      img {
+        transform: scale(1.2);
+        transition: all 0.5s;
+      }
+    }
+    &--wrapper {
+      padding: 0px 16px;
+    }
+    
+    &--image {
+      width: 100%;
+      height: 250px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    &--overlay {
+      background: #a8abad;
+      opacity: 0.5;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    }
+
+    &--name {
+      font-size: 18px;
+      font-weight: 600;
+      color: #fff;
+    }
+    
+    &--info {
+      flex-direction: column;
+      padding: 12px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      z-index: 1;
+    }
+  }
+}
