--- a/static/style/ui/_sign.scss
+++ b/static/style/ui/_sign.scss
@@ -105,7 +105,7 @@
       }
       &:focus {
         box-shadow: none !important;
-        border: 1px solid #1bb76e !important;
+        border: 1px solid $color-green !important;
       }
     }
   }
