--- a/static/style/main.scss
+++ b/static/style/main.scss
@@ -3,6 +3,7 @@
 body {
   font-family: Proxima Nova ExtraBold,Helvetica Neue,Helvetica,Arial,sans-serif;
   margin: 0px !important;
+  overflow-x: hidden;
   background: $color-bg-dark;
 }
 
