--- a/static/style/ui/_base.scss
+++ b/static/style/ui/_base.scss
@@ -8,5 +8,6 @@
 @import "./edit-post.scss";
 @import "./post.scss";
 @import "./settings.scss";
+@import "./conversation.scss";
 
 @import "./responsive";
