--- a/static/style/ui/_header.scss
+++ b/static/style/ui/_header.scss
@@ -99,6 +99,9 @@
         align-items: center;
         justify-content: center;
         padding: 0px 12px;
+        height: 34px;
+        line-height: 34px;
+        text-align: center;
       }
     }
   }
